[gd_scene load_steps=9 format=3 uid="uid://dg7cfeaaojmya"]

[ext_resource type="Script" path="res://src/tree/tree_tuck.gd" id="1_hrf2l"]
[ext_resource type="Texture2D" uid="uid://b0o7b0c3g1h3j" path="res://src/tree/tuck.png" id="2_m5140"]
[ext_resource type="Texture2D" uid="uid://kvnucnolan1k" path="res://src/tree/branch.png" id="3_puh5r"]

[sub_resource type="Animation" id="Animation_tdhg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.00147765),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rq4bt"]
resource_name = "correct-hit"
length = 0.6
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.148334, 0.196055, 0.331699, 0.463718, 0.591058),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8), Vector2(0, -22), Vector2(0, -22), Vector2(0, 110), Vector2(0, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.148334, 0.196055, 0.331699, 0.463718, 0.591058),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.126137, 0.240855, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.148334, 0.196055, 0.331699, 0.463718, 0.591058),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.0532, 1.0532), Vector2(1.36544, 0.955445), Vector2(1.0532, 1.0532), Vector2(1.0532, 1.0532), Vector2(1.0532, 1.0532), Vector2(0.8132, 1.0532)]
}

[sub_resource type="Animation" id="Animation_h6m2x"]
resource_name = "move-below"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15072),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 133)]
}

[sub_resource type="Animation" id="Animation_k1w2a"]
resource_name = "wrong-hit"
length = 0.35
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0512377, 0.151238, 0.237459, 0.34337),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(593, 577), Vector2(593, 577), Vector2(593, 577), Vector2(593, 577), Vector2(593, 577)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0512377, 0.151238, 0.237459, 0.34337),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.094668, -0.052702, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0512377, 0.151238, 0.237459, 0.34337),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.963608, 0.963608), Vector2(1.11462, 1.11462), Vector2(1.11462, 1.11462), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ewc1w"]
_data = {
"RESET": SubResource("Animation_tdhg7"),
"correct-hit": SubResource("Animation_rq4bt"),
"move-below": SubResource("Animation_h6m2x"),
"wrong-hit": SubResource("Animation_k1w2a")
}

[node name="TreeTuck" type="Node2D"]
script = ExtResource("1_hrf2l")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_ewc1w")
}

[node name="Art" type="Sprite2D" parent="Sprite"]
scale = Vector2(0.714112, 0.714112)
texture = ExtResource("2_m5140")

[node name="Branch" type="Sprite2D" parent="."]
texture = ExtResource("3_puh5r")

[node name="RightBranchPosition" type="Marker2D" parent="."]
position = Vector2(138, 1)

[node name="LeftBranchPosition" type="Marker2D" parent="."]
position = Vector2(-130, 0)

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
